REGRESSION(r267727): Warning spam from JSC_DECLARE_CUSTOM_GETTER https://bugs.webkit.org/show_bug.cgi?id=217585

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-10-16
Reviewed by Yusuke Suzuki.

Source/JavaScriptCore:

A small number of source files now need to use JSC_DECLARE_CUSTOM_GETTER_WITHOUT_WTF_INTERNAL.

* b3/testb3_5.cpp:
* b3/testb3_7.cpp:
* tools/JSDollarVM.cpp:

Source/WebCore:

SelectorCompiler.cpp needs the new JSC_DECLARE_JIT_OPERATION_WITHOUT_WTF_INTERNAL.

* cssjit/SelectorCompiler.cpp:

Source/WTF:

The problem is that the declarations are static, so WTF_INTERNAL is redundant with that.
(File-static declarations are of course local to the current file, and apparently GCC really
wants us to not hide symbols that don't need to be hidden.)

I considered remove WTF_INTERNAL from JSC_DECLARE_JIT_OPERATION and ensuring all uses are
static, but it's not possible because it is frequently used in header files. It should only
be static when used in .cpp files.

So I decided to split JSC_DECLARE_JIT_OPERATION into two versions, the current one that uses
WTF_INTERNAL, and JSC_DECLARE_JIT_OPERATION_WITHOUT_WTF_INTERNAL that doesn't. That is not a
great name, but it's only used in a couple places, so I guess that's OK.
JSC_DECLARE_CUSTOM_GETTER and JSC_DECLARE_CUSTOM_SETTER use this new version, since those
are only used in static declarations in .cpp files. A small number of source files also need
the version without the WTF_INTERNAL. All other users can continue to use original
JSC_DECLARE_JIT_OPERATION with WTF_INTERNAL and not worry about the ugly name.

I'm not terribly happy with this solution, and it's a little fragile too (you probably won't
directly use JSC_DECLARE_JIT_OPERATION_WITHOUT_WTF_INTERNAL in a place that needs
WTF_INTERNAL, but you might use JSC_DECLARE_CUSTOM_GETTER and JSC_DECLARE_CUSTOM_SETTER in
such a way!), but at least it will avoid the warning spam and allow us to see warnings for
real problems.

* wtf/PlatformCallingConventions.h:

Canonical link: https://commits.webkit.org/230549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268587 268f45cc-cd09-0410-ab3c-d52691b4dbfc